--- a/src/App.scss
+++ b/src/App.scss
@@ -42,7 +42,7 @@
   min-height: 100vh;
   &_nav {
     height: 100px;
-    background-color: lightcoral;
+    background-color: lightblue;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
